add new reviews

--- a/embed/diepeveen/style.css
+++ b/embed/diepeveen/style.css
@@ -1204,7 +1204,7 @@
   width: 100%;
   overflow: auto;
   position: relative;
-  background-image: url("https://thekitchenarchitects.nl/wp-content/uploads/2020/01/achtergrond-slider-home-kitchen-architects-keukens-scaled.jpg");
+  background-image: url("https://thekitchenartstudios.nl/wp-content/uploads/2020/01/achtergrond-slider-home-kitchen-architects-keukens-scaled.jpg");
   background-position: center;
   background-size: cover;
 }
